// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button adds additional className when supplied 1`] = `
<button
  className="reactist button very-complex classnames-are-added"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="wrapper"
  >
    <span>
      THE BUTTON TEXT
    </span>
  </div>
</button>
`;

exports[`Button renders a tooltip when prop is supplied 1`] = `
<Tooltip
  allowVaguePositioning={false}
  delayHide={0}
  delayShow={1000}
  hideOnScroll={true}
  position="auto"
  text="THE TOOLTIP"
>
  <button
    className="reactist button"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="wrapper"
    >
      <span>
        THE BUTTON TEXT
      </span>
    </div>
  </button>
</Tooltip>
`;

exports[`Button renders empty without crashing 1`] = `
<button
  className="reactist button"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="wrapper"
  >
    <span />
  </div>
</button>
`;

exports[`Button renders name as button text 1`] = `
<button
  className="reactist button"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="wrapper"
  >
    <span>
      THE BUTTON TEXT
    </span>
  </div>
</button>
`;
